// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renderer a link home in isolated mode 1`] = `
<Styled(ToolbarButton)
  ariaLabel="Show all components"
  href="blank#/"
  title="Show all components"
>
  <MdFullscreenExit />
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to example isolated mode 1`] = `
<Styled(ToolbarButton)
  ariaLabel="Open isolated"
  href="blank#!/Pizza/3"
  title="Open isolated"
>
  <MdFullscreen />
</Styled(ToolbarButton)>
`;

exports[`should renderer a link to isolated mode 1`] = `
<Styled(ToolbarButton)
  ariaLabel="Open isolated"
  href="blank#!/Pizza"
  title="Open isolated"
>
  <MdFullscreen />
</Styled(ToolbarButton)>
`;
